# celest

./: package.json  statistics.json
.github/workflows/: rust.yml
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: celest.rs  main.rs
src-tauri/src/celest/: mod.rs
src-tauri/src/celest/commands/: config.rs
src-tauri/src/celest/events/: cargo.rs  clear_save_game.rs  commander.rs  elite_dangerous.rs  engineer_progress.rs  file_header.rs  load_game.rs  location.rs  materials.rs  mod.rs  new_commander.rs  progress.rs  rank.rs  receive_text.rs  reputation.rs  squadron_startup.rs  statistics.rs
src-tauri/src/celest/logs/: utils.rs
